--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Statistics PhD Student</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Graduate Researcher</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Lancaster, UK</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>a.wise1 (at) lancaster (dot) ac (dot) uk</p>
           <hr>
@@ -50,7 +50,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-8"></i>About Me</h2>
-          <p>I am a PhD Student in the STOR-i Centre for Doctoral Training at Lancaster University. I am also a graduate teaching assistant in the Department of Mathematics and Statistics. My research focus is on interactive machine learning, specifically contextual bandit problems. I am a fan of the Eurovision Song Contest and my favourite animal is the humble housecat.</p>
+          <p>I am a graduate researcher and associate lecturer at Lancaster University. My research focus is on interactive machine learning, specifically contextual bandit problems. I am a fan of the Eurovision Song Contest and my favourite animal is the humble housecat. I own two cats called Mochi and Alfie.</p>
       </div>
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-8"></i>Research</h2>
